argocd/infra/argocd/repo-server-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-repo-server-metrics
    app.kubernetes.io/part-of: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-repo-server
  ports:
    - name: http-metrics
      port: 8084
      protocol: TCP
      targetPort: metrics
