argocd/infra/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-webhook
  namespace: argocd
  labels:
    app.kubernetes.io/name: hivewiki-argocd
    app.kubernetes.io/part-of: hivewiki
spec:
  parentRefs:
    - name: my-alb-gateway
      namespace: kube-system
      sectionName: argocd-webhook
  hostnames:
    - argocd.hive-wiki.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
